tests/compiletests/ui/lang/core/ref/member_ref_arg-broken.stderr
warning: `#[inline(never)]` function `member_ref_arg_broken::f` has been inlined
   --> $DIR/member_ref_arg-broken.rs:
    |
    | fn f(x: &u32) -> u32 {
    |    ^
    |
    = note: inlining was required due to illegal (pointer) argument
    = note: called from `member_ref_arg_broken::main`

warning: `#[inline(never)]` function `member_ref_arg_broken::g` has been inlined
   --> $DIR/member_ref_arg-broken.rs:
    |
    | fn g(xy: (&u32, &u32)) -> (u32, u32) {
    |    ^
    |
    = note: inlining was required due to illegal (pointer) argument
    = note: called from `member_ref_arg_broken::main`

warning: `#[inline(never)]` function `member_ref_arg_broken::h` has been inlined
   --> $DIR/member_ref_arg-broken.rs:
    |
    | fn h(xyz: (&u32, &u32, &u32)) -> (u32, u32, u32) {
    |    ^
    |
    = note: inlining was required due to illegal parameter type
    = note: called from `member_ref_arg_broken::main`

warning: `#[inline(never)]` function `member_ref_arg_broken::h_newtyped` has been inlined
   --> $DIR/member_ref_arg-broken.rs:
    |
    | fn h_newtyped(xyz: ((&u32, &u32, &u32),)) -> (u32, u32, u32) {
    |    ^^^^^^^^^^
    |
    = note: inlining was required due to illegal parameter type
    = note: called from `member_ref_arg_broken::main`

error: error:0:0 - OpLoad Pointer <id> '$ID[%$ID]' is not a logical pointer.
         %39 = OpLoad %uint %38
    |
    = note: spirv-val failed
    = note: module `$TEST_BUILD_DIR/lang/core/ref/member_ref_arg-broken`

error: aborting due to 1 previous error; 4 warnings emitted

